@@ -29,10 +29,12 @@ StaticString BZ2File::s_class_name("BZ2File");
 BZ2File::BZ2File(): m_bzFile(nullptr), m_eof(false) {
   m_innerFile = NEWOBJ(PlainFile)();
   m_innerFile->unregister();
+  m_isLocal = m_innerFile->m_isLocal;
 }
 
 BZ2File::BZ2File(PlainFile* innerFile): m_bzFile(nullptr), m_eof(false) {
   m_innerFile = innerFile;
+  m_isLocal = m_innerFile->m_isLocal;
 }
 
 BZ2File::~BZ2File() {
