@@ -1,0 +1,1 @@
+-vHttp.SlowQueryThreshold=60000
