@@ -1,4 +1,5 @@
 Future (next release):
+  - Implement stream_is_local
   - Implement read support for .phar
   - Implement assert with string arguments
   - Implement RecursiveArrayIterator
